--- a/Prawesome/bin/AndroidManifest.xml
+++ b/Prawesome/bin/AndroidManifest.xml
@@ -3,10 +3,13 @@
     package="com.example.prawesome"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="21" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    
 
     <application
         android:allowBackup="true"
@@ -46,10 +49,6 @@
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail" >
-        </activity>
-        <activity
-            android:name=".DataBaseDebugActivity"
-            android:label="@string/title_activity_data_base_debug" >
         </activity>
         <activity
             android:name=".LocalDataBaseDebugActivity"
