--- a/Prawesome/build.gradle
+++ b/Prawesome/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'android-library'
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':appcompat_v7')
+	classpath 'com.android.tools.build:gradle:0.9.+'
 }
 
 android {
