--- a/Prawesome/.classpath
+++ b/Prawesome/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v7-appcompat.jar"/>
 	<classpathentry kind="lib" path="libs/gson-2.3.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/Android/android-sdk/extras/android/support/v7/appcompat/libs/android-support-v7-appcompat.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
