--- a/build.gradle
+++ b/build.gradle
@@ -6,4 +6,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.+'
     }
+	android {
+      lintOptions {
+          abortOnError false
+      }
+  }
 }
