--- a/Prawesome/build.gradle
+++ b/Prawesome/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'android'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile project(':appcompat_v7')
+    compile files('libs/gson-2.3.jar')
+    compile files('libs/android-support-v7-appcompat.jar')
+    compile files('libs/android-support-v4.jar')
 }
 
 android {
