--- a/Prawesome/project.properties
+++ b/Prawesome/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-20
 android.library=false
-android.library.reference.1=../../Documents/Android/appcompat_v7
+android.library.reference.1=..\\..\\Documents\\Android\\appcompat_v7
+android.library.reference.2=../../Documents/Android/google-play-services_lib
