--- a/Prawesome/build.gradle
+++ b/Prawesome/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'android'
 
 dependencies {
     compile files('libs/gson-2.3.jar')
-    compile files('libs/android-support-v7-appcompat.jar')
-    compile files('libs/android-support-v4.jar')
+    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:appcompat-v7:21.0.2'
 }
 
 android {
-    compileSdkVersion 20
+    compileSdkVersion 21
     buildToolsVersion "21.1.0"
 
     sourceSets {
